docs(introduction): update Nuxt link and adjust wording

--- a/docs/content/1.getting-started/1.introduction.md
+++ b/docs/content/1.getting-started/1.introduction.md
@@ -5,7 +5,7 @@ description: "@nuxtjs/supabase is a Nuxt module for first class integration with
 
 [@nuxtjs/supabase](https://github.com/nuxt-modules/supabase) is a Nuxt module for first class integration with Supabase.
 
-Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https://supabase.com) to learn more.
+Checkout the [Nuxt](https://nuxt.com/) documentation and [Supabase](https://supabase.com) to learn more.
 
 ::warning
 For integrating Supabase with Nuxt 2, checkout [supabase-community/nuxt-supabase](https://github.com/supabase-community/nuxt-supabase).
