feat(auth): use jwt signing keys

--- a/docs/content/1.getting-started/1.introduction.md
+++ b/docs/content/1.getting-started/1.introduction.md
@@ -31,7 +31,7 @@ Add `SUPABASE_URL` and `SUPABASE_KEY` to the `.env`:
 
 ```bash [env]
 SUPABASE_URL="https://example.supabase.co"
-SUPABASE_KEY="<your_key>"
+SUPABASE_KEY="<your_publishable_key>"
 ```
 
 ::tip
@@ -61,11 +61,29 @@ The unique Supabase URL which is supplied when you create a new project in your 
 
 Default: `process.env.SUPABASE_KEY`
 
-Supabase 'anon key', used to bypass the Supabase API gateway and interact with your Supabase database making use of user JWT to apply RLS Policies.
+Supabase `publishable key`, used to verify and decode the JWT. Can bypass the Supabase API gateway and interact with your Supabase database applying RLS Policies.
 
-### `serviceKey`
+::note{to="https://supabase.com/blog/jwt-signing-keys"}
+In `v1.x.x` and earlier, this was referring to the `anon key`. With the introduction of JWT signing keys, Supabase now needs a "publishable key" to interact with your database and take advantage of Raw Level Security.
+::
+
+### `secretKey`
+
+Default: `process.env.SUPABASE_SECRET_KEY`
+
+Supabase `secret key`, has super admin rights and can bypass your Row Level Security.
+
+::warning
+This key should be kept secret and never exposed to the client. Keep it in environment variables.
+::
+
+### `serviceKey` :u-badge{label="Deprecated" color="warning"}
 
 Default: `process.env.SUPABASE_SERVICE_KEY`
+
+::warning{to="https://supabase.com/blog/jwt-signing-keys"}
+*Legacy API key* used before signing JWT keys were introduced. Use `secretKey` instead. This option will be removed in a future version.
+::
 
 Supabase 'service role key', has super admin rights and can bypass your Row Level Security.
 
