--- a/docs/content/3.services/2.serverSupabaseServiceRole.md
+++ b/docs/content/3.services/2.serverSupabaseServiceRole.md
@@ -14,7 +14,7 @@ This function is designed to work only in [server routes](https://nuxt.com/docs/
 
 It works similary as the [serverSupabaseClient](/services/serversupabaseclient) but it provides a client with super admin rights that can bypass your [Row Level Security](https://supabase.com/docs/guides/auth/row-level-security).
 
-> The client is initialized with the `SUPABASE_SERVICE_KEY` you must have in your `.env` file. Checkout the doc if you want to know more about [Supabase keys](https://supabase.com/docs/learn/auth-deep-dive/auth-deep-dive-jwts#jwts-in-supabase).
+> The client is initialized with the `SUPABASE_SECRET_KEY` (recommended) or `SUPABASE_SERVICE_KEY` (deprecated) you must have in your `.env` file. We recommend using the new JWT signing keys (`SUPABASE_SECRET_KEY`) as described in the [Supabase blog post](https://supabase.com/blog/jwt-signing-keys).
 
 Define your server route and just import the `serverSupabaseServiceRole` from `#supabase/server`.
 
