--- a/docs/content/1.getting-started/1.introduction.md
+++ b/docs/content/1.getting-started/1.introduction.md
@@ -64,7 +64,7 @@ Default: `process.env.SUPABASE_KEY`
 Supabase `publishable key`, used to verify and decode the JWT. Can bypass the Supabase API gateway and interact with your Supabase database applying RLS Policies.
 
 ::note{to="https://supabase.com/blog/jwt-signing-keys"}
-In `v1.x.x` and earlier, this was referring to the `anon key`. With the introduction of JWT signing keys, Supabase now needs a "publishable key" to interact with your database and take advantage of Raw Level Security.
+In `v1.x.x` and earlier, this was referring to the `anon key`. With the introduction of JWT signing keys, Supabase now needs a "publishable key" to decode the JWT and let you interact with your database.
 ::
 
 ### `secretKey`
