--- a/docs/content/1.getting-started/4.migration.md
+++ b/docs/content/1.getting-started/4.migration.md
@@ -9,7 +9,7 @@ This guide will help you migrate from `v1.x` to `v2.x`, which introduces support
 
 ## 🔐 What are JWT Signing Keys?
 
-Supabase has introduced a major security improvement by moving from symmetric to asymmetric JWT (JSON Web Token) signing. This change addresses critical security and performance issues in how your applications handle authentication.
+Supabase has introduced a major security improvement by moving from symmetric to asymmetric JWT (JSON Web Token) signing. This change brings security and performance improvements in how your applications handle authentication.
 
 ### The Problem with Symmetric Keys
 
