--- a/docs/content/1.getting-started/4.migration.md
+++ b/docs/content/1.getting-started/4.migration.md
@@ -39,9 +39,8 @@ Read the full technical explanation in the official Supabase blog post.
 - **Before (v1.x):** `useSupabaseUser` returned the full `User` object from [auth.getUser()](https://supabase.com/docs/reference/javascript/auth-getuser)
 - **After (v2.x):** `useSupabaseUser` returns `Claims` object from [auth.getClaims()](https://supabase.com/docs/reference/javascript/auth-getclaims) as a [JWT Payload](https://supabase.com/docs/guides/auth/jwts)
 
-#### `auth.getUser()` - Full User Object
-
-```json
+::code-group
+```json [auth.getUser() as .json]
 {
   id: "11111111-1111-1111-1111-111111111111",
   aud: "authenticated",
@@ -57,12 +56,10 @@ Read the full technical explanation in the official Supabase blog post.
 }
 ```
 
-#### `auth.getClaims().claims` - JWT Payload
-```json
+```json [auth.getClaims().claims as .json]
 {
   session_id: "11111111-1111-1111-1111-111111111111",
   sub: "11111111-1111-1111-1111-111111111111",
-  app_metadata: {},
   aud: "authenticated",
   role: "authenticated",
   email: "example@email.com",
@@ -73,13 +70,15 @@ Read the full technical explanation in the official Supabase blog post.
   is_anonymous: false,
   iss: "https://project-id.supabase.co/auth/v1",
   phone: "+13334445555",
-  user_metadata: {}
+  app_metadata: {},
+  user_metadata: {},
   // identities is missing
   // last_sign_in_at is missing
   // confirmed_at is missing
   // email_confirmed_at is missing
 }
 ```
+::
 
 ::tip
 If you need the full User object, you'll need to explicitly call `auth.getUser()` but if you only need basic info (email, role...) no changes are required.
