--- a/docs/content/1.getting-started/1.introduction.md
+++ b/docs/content/1.getting-started/1.introduction.md
@@ -155,7 +155,7 @@ Options for cookies used to share tokens between server and client, refer to [co
 
 ### `types`
 
-Default: `./types/database.types.ts`
+Default: `./app/types/database.types.ts`
 
 The path for the generated Supabase TypeScript definitions. The database definitions will be automatically passed to all clients: `useSupabaseClient`, `serverSupabaseClient` and `serverSupabaseServiceRole`.
 
